# bme280-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: construction.yml  deploiement.yml
examples/: lire_temperature.rs
src/: LICENSE  capteur.rs  commande.rs  donnees.rs  lib.rs
