[package]
name = "bme_280"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ftmazzone/bme280.git"
include = [
    "/src",
    "/Cargo.*",
    "/LICENSE*",
    "/*.md",
]

[dependencies]
rppal = { version = "0"}
log = "0"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
env_logger = "0"
ctrlc = "3"